Post Grid: layout broken issue fixed

--- a/src/css/view/product-grid.scss
+++ b/src/css/view/product-grid.scss
@@ -3123,7 +3123,7 @@
         .elementor-widget-container{
             .eael-product-grid,
             .eael-post-grid{
-                .woocommerce ul.products{
+                &.grid .woocommerce ul.products{
                     display: grid;
                 }
                 li.product{
